:bug: Fix target out of screen

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     color: #ffffff;
     text-transform: uppercase;
     opacity: 0.15;
+    user-select: none;
 }
 
 .shooter .score .value
@@ -56,6 +57,7 @@
     text-transform: uppercase;
     opacity: 0.15;
     font-size: 30px;
+    user-select: none;
 }
 
 .shooter .targets
@@ -76,7 +78,7 @@
     height: 12vmin;
     background: #dddddd;
     border-radius: 50%;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.55)/*#00000055*/;
+    box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.55)/*#00000055*/;
 }
 
 
